--- a/stack.yaml
+++ b/stack.yaml
@@ -40,7 +40,11 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-# extra-deps: []
+extra-deps:
+- git: https://github.com/mtaylor91/iam-mtaylor-io-client.git
+  commit: 389aaf13e4b6a23d6e8b5332c9a71ef430f0f071
+- git: https://github.com/mtaylor91/iam-mtaylor-io-core.git
+  commit: 313dea8cf46b40e74f0d2ec916d14594fd2e20b4
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
