--- a/deploy/kustomization.yml
+++ b/deploy/kustomization.yml
@@ -1,9 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-configMapGenerator:
-- name: events-mtaylor-io
 commonLabels:
   app: events-mtaylor-io
+configMapGenerator:
+- name: events-mtaylor-io
 resources:
 - deployment.yml
 - service.yml
+secretGenerator:
+- name: events-mtaylor-io
