WIP: database integration

--- a/events-mtaylor-io.cabal
+++ b/events-mtaylor-io.cabal
@@ -38,6 +38,7 @@ library
       Server
       Server.API
       Server.App
+      Server.Migrations
       Server.Session
       Socket
       State
