Add build image

--- a/.drone.yml
+++ b/.drone.yml
@@ -13,6 +13,16 @@ steps:
     registry: images.home.mtaylor.io
     tags:
     - main
+- name: build-image
+  image: images.home.mtaylor.io/drone-kaniko:latest
+  settings:
+    repo: images.home.mtaylor.io/events-mtaylor-io
+    enable_cache: true
+    username: anonymous
+    password: anonymous
+    registry: images.home.mtaylor.io
+    tags:
+    - build
 trigger:
   branch:
   - main
