Externalize build from docker image

--- a/.drone.yml
+++ b/.drone.yml
@@ -3,6 +3,10 @@ kind: pipeline
 type: kubernetes
 name: build
 steps:
+- name: build
+  image: images.home.mtaylor.io/events-mtaylor-io:build
+  commands:
+  - stack build --copy-bins --local-bin-path .
 - name: image
   image: images.home.mtaylor.io/drone-kaniko:latest
   settings:
