--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ steps:
 - name: build
   image: images.home.mtaylor.io/events-mtaylor-io:buildV1
   commands:
-  - stack build --copy-bins --local-bin-path .
+  - stack build --allow-different-user --copy-bins --local-bin-path .
 - name: image
   image: images.home.mtaylor.io/drone-kaniko:latest
   settings:
