Revert "Remove build image"
This reverts commit 81b571e4f1267d9fe93b8b6ec7074108a12073a4.

--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ type: kubernetes
 name: build
 steps:
 - name: build
-  image: images.home.mtaylor.io/haskell
+  image: images.home.mtaylor.io/events-mtaylor-io:buildV1
   commands:
   - stack build --allow-different-user --copy-bins --local-bin-path .
 - name: image
@@ -28,7 +28,7 @@ type: kubernetes
 name: release
 steps:
 - name: build
-  image: images.home.mtaylor.io/haskell
+  image: images.home.mtaylor.io/events-mtaylor-io:buildV1
   commands:
   - stack build --allow-different-user --copy-bins --local-bin-path .
 - name: image
@@ -61,6 +61,17 @@ steps:
   when:
     event:
     - tag
+- name: build-image
+  image: images.home.mtaylor.io/drone-kaniko:latest
+  settings:
+    repo: images.home.mtaylor.io/events-mtaylor-io
+    dockerfile: Dockerfile.build
+    enable_cache: true
+    username: anonymous
+    password: anonymous
+    registry: images.home.mtaylor.io
+    tags:
+    - build
 trigger:
   event:
   - tag
