--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,8 @@ type: kubernetes
 name: build
 steps:
 - name: build
-  image: images.home.mtaylor.io/events-mtaylor-io:buildV1
+  pull: always
+  image: images.home.mtaylor.io/events-mtaylor-io:build
   commands:
   - stack build --allow-different-user --copy-bins --local-bin-path .
 - name: image
@@ -28,7 +29,8 @@ type: kubernetes
 name: release
 steps:
 - name: build
-  image: images.home.mtaylor.io/events-mtaylor-io:buildV1
+  pull: always
+  image: images.home.mtaylor.io/events-mtaylor-io:build
   commands:
   - stack build --allow-different-user --copy-bins --local-bin-path .
 - name: image
