Implement proper socket event authorization

--- a/events-mtaylor-io.cabal
+++ b/events-mtaylor-io.cabal
@@ -41,6 +41,7 @@ library
       Server.Migrations
       Server.Session
       Socket
+      Socket.Auth
       Socket.Handlers
       State
       Topic
