Add topics API endpoint

--- a/events-mtaylor-io.cabal
+++ b/events-mtaylor-io.cabal
@@ -26,6 +26,8 @@ source-repository head
 library
   exposed-modules:
       API
+      API.Sessions
+      API.Topics
       Client
       Command
       Config
