--- a/events-mtaylor-io.cabal
+++ b/events-mtaylor-io.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       API
+      API.Helpers
       API.Sessions
       API.Topics
       Client
