--- a/package.yaml
+++ b/package.yaml
@@ -26,7 +26,6 @@ dependencies:
 - bytestring
 - containers
 - ed25519
-- events-core
 - hasql
 - hasql-migration
 - hasql-pool
@@ -35,6 +34,7 @@ dependencies:
 - http-client-tls
 - http-types
 - lens
+- mtaylor-io-events-core
 - mtaylor-io-iam-client
 - mtaylor-io-iam-core
 - mtl
