Build image on workflow_dispatch

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -3,6 +3,7 @@ on:
   schedule:
   # Weekly on Sunday at 00:00
   - cron: "0 0 * * 0"
+  workflow_dispatch:
 jobs:
   build-image:
     name: "Docker Build Image"
