--- a/mtaylor-io-events-server.cabal
+++ b/mtaylor-io-events-server.cabal
@@ -60,7 +60,7 @@ library
     , ed25519
     , hasql
     , hasql-migration
-    , hasql-pool
+    , hasql-pool ==0.9.*
     , hasql-transaction
     , http-client
     , http-client-tls
@@ -104,7 +104,7 @@ executable events-mtaylor-io
     , ed25519
     , hasql
     , hasql-migration
-    , hasql-pool
+    , hasql-pool ==0.9.*
     , hasql-transaction
     , http-client
     , http-client-tls
@@ -150,7 +150,7 @@ test-suite events-mtaylor-io-test
     , ed25519
     , hasql
     , hasql-migration
-    , hasql-pool
+    , hasql-pool ==0.9.*
     , hasql-transaction
     , http-client
     , http-client-tls
