--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,6 +82,9 @@ jobs:
       uses: "actions/checkout@v4"
     - name: "Download artifacts"
       uses: "actions/download-artifact@v4"
+      with:
+        name: events-mtaylor-io
+        path: events-mtaylor-io
     - name: "Fix path and permissions"
       run: |
         set -eux
